// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar renders correctly 1`] = `
<DocumentFragment>
  <aside
    class="menu sidebar"
  >
    <div
      class="box"
    >
      <p
        class="menu-label"
      >
        Search the undefined
      </p>
      <p
        class="menu-list control has-icons-left"
      >
        <span
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-magnifying-glass "
            data-icon="magnifying-glass"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352c79.5 0 144-64.5 144-144s-64.5-144-144-144S64 128.5 64 208s64.5 144 144 144z"
              fill="currentColor"
            />
          </svg>
        </span>
        <input
          aria-label="blog-search"
          class="input is-rounded"
          placeholder="Title..."
          type="text"
        />
      </p>
    </div>
    <div
      class="box"
    >
      <p
        class="menu-label"
      >
        Related posts
      </p>
      <ul
        class="menu-list"
      >
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/baking-tutorial/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Baking Tutorial
                  </h6>
                  <p>
                    Lemon drops pastry danish halvah. Chupa chups fruitcake powder...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/ten-best-things/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    10 Best Things
                  </h6>
                  <p>
                    Cheesecake lemon drops Cheesecake lemon drops pastry danish halvah...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/guide/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Guide
                  </h6>
                  <p>
                    Chupa chups fruitcake powder dessert gingerbread gummies...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div
      class="box"
    >
      <p
        class="menu-label"
      >
        Featured posts
      </p>
      <ul
        class="menu-list"
      >
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/baking-tutorial/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Baking Tutorial
                  </h6>
                  <p>
                    Lemon drops pastry danish halvah. Chupa chups fruitcake powder...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/ten-best-things/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    10 Best Things
                  </h6>
                  <p>
                    Cheesecake lemon drops Cheesecake lemon drops pastry danish halvah...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/guide/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Guide
                  </h6>
                  <p>
                    Chupa chups fruitcake powder dessert gingerbread gummies...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`SideBar renders correctly without related posts 1`] = `
<DocumentFragment>
  <aside
    class="menu sidebar"
  >
    <div
      class="box"
    >
      <p
        class="menu-label"
      >
        Search the undefined
      </p>
      <p
        class="menu-list control has-icons-left"
      >
        <span
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-magnifying-glass "
            data-icon="magnifying-glass"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352c79.5 0 144-64.5 144-144s-64.5-144-144-144S64 128.5 64 208s64.5 144 144 144z"
              fill="currentColor"
            />
          </svg>
        </span>
        <input
          aria-label="blog-search"
          class="input is-rounded"
          placeholder="Title..."
          type="text"
        />
      </p>
    </div>
    <div
      class="box"
    >
      <p
        class="menu-label"
      >
        Featured posts
      </p>
      <ul
        class="menu-list"
      >
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/baking-tutorial/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Baking Tutorial
                  </h6>
                  <p>
                    Lemon drops pastry danish halvah. Chupa chups fruitcake powder...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/ten-best-things/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    10 Best Things
                  </h6>
                  <p>
                    Cheesecake lemon drops Cheesecake lemon drops pastry danish halvah...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
        <li>
          <a
            class="horizontal-post-tile"
            href="/undefined/guide/"
          >
            <div
              class="card"
            >
              <div
                class="card-image"
              >
                <figure>
                  <img
                    alt="blog image"
                    image="[object Object]"
                  />
                </figure>
              </div>
              <div
                class="card-content"
              >
                <div
                  class="content"
                >
                  <h6>
                    Guide
                  </h6>
                  <p>
                    Chupa chups fruitcake powder dessert gingerbread gummies...
                  </p>
                </div>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </aside>
</DocumentFragment>
`;
